V 4.0 - LogBack-Usage.md updated (WIP)